# AlgoTrade

./: .gitignore  pyproject.toml
trading-bot/: .env  .env.example  README.md  test.py
trading-bot/scripts/: run_bot.py  zerodha_auth.py
trading-bot/src/: auth.py  bot.py  config.py  kite_client.py
trading-bot/src/strategies/: trailing_sl.py
trading-bot/src/utils/: file_helpers.py  math_helpers.py
trading-bot/tests/: test_math_helpers.py
